# ai-agent-assessment

./: .env.example  .gitignore  README.md  processor_main.py  pyproject.toml
autonomous_agents/: config.py  main.py
autonomous_agents/behaviors/: base.py  random_message.py  token_balance.py
autonomous_agents/cli/: agent_cli.py  processor_cli.py
autonomous_agents/core/: agent.py  message.py  registry.py
autonomous_agents/handlers/: base.py  crypto.py  hello.py
autonomous_agents/utils/: logger.py  transfer_prcessor.py
tests/: test_autonomous_agents.py
